# trading-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  research_results.json
assets/: index-C2wV_xsN.js  index-DTVXq2wv.css  index-mLCho8zy.js
backtest/: Cargo.toml
backtest/src/: lib.rs  research.rs
common/: Cargo.toml
common/src/: lib.rs
configs/: best_strategy.json
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: Heatmap.jsx  KpiCards.jsx  ResultsTable.jsx
execution/: Cargo.toml
execution/src/: lib.rs
features/: Cargo.toml
features/src/: lib.rs
ingestion/: Cargo.toml
ingestion/src/: lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs
orderbook/: Cargo.toml
orderbook/src/: lib.rs
risk/: Cargo.toml
risk/src/: lib.rs
signals/: Cargo.toml
signals/src/: lib.rs
