[package]
name = "backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
ingestion = { path = "../ingestion" }
orderbook = { path = "../orderbook" }
features = { path = "../features" }
signals = { path = "../signals" }
execution = { path = "../execution" }
risk = { path = "../risk" } # <--- ADD THIS LINE
common = { path = "../common" }
tracing = "0.1"
memmap2 = "0.9"
tokio = { version = "1.0", features = ["full"] }